# moab

./: .clang-format  .gitignore  AUTHORS  AdvanceSplit.cpp  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  FAQ.md  GrabToSplit.cpp  LICENSE  Makefile.am  README.md  RELEASE_NOTES  RELEASE_NOTES.md  RELEASE_NOTES.txt  TODO.md  bitbucket-pipelines.yml  bootstrap  configure.ac  moab.make.cmake  moab.make.in  shippable.yml
.circleci/: config.yml
MeshFiles/: Makefile.am
config/: AutoconfHeader.cmake  CMakeDistCheck.cmake  CMakeLibraryFuncs.cmake  CheckCompilerFlags.cmake  FindCython.cmake  FindEigen3.cmake  FindHDF5_MOAB.cmake  FindNetCDF.cmake  FindPNetCDF.cmake  FindSphinx.cmake  FindTempestRemap.cmake  MOAB.pc.cmake.in  MOAB.pc.in  MOABConfig.cmake.cmake  MOABConfig.cmake.h.in  MOABConfig.cmake.in  MOABConfig.h.in  UseCython.cmake  ax_cxx_compile_stdcxx.m4  ax_cxx_have_isfinite.m4  compiler.m4  cplusplus.m4  eigen3.m4  external_packages_util.m4  fortran_dependencies.m4  fortran_dependencies.mk  fortran_dependencies.pl  hdf5.m4  mesquite.m4  mpi.m4  netcdf.m4  parmetis.m4  run_clang_format.sh  summary.m4
debian/: changelog  control  rules
doc/: custom_dark_theme.css  customdoxygen.css  header.html  highlight.pack.js  user.dox.cmake.in  user.dox.in  xt256-light.css
docker/: Dockerfile  bootstrapMOAB
docs/: conf.py  index.rst
examples/: CMakeLists.txt  ElementSolIndQM.cpp  ElementSolIndQM.hpp  ExtrudeHelix.cpp  HelixSweeper.cpp  HexaSweepHelix.cpp  HexaSweepHelix2.cpp  LocalRefHex.cpp  MergeLocally.cpp  MergePair.cpp  OptimizeMeshMesquite.cpp  TemplatedAdaptRefinement.cpp  bound.cpp  dualForMPAS.cpp  dualToTriSurf.cpp  extractContinent.cpp  makefile.config.cmake  makefile.config.in  makefile.in  mpas_partition.cpp  mpas_writer.cpp  sphtri.cpp
itaps/: iBase.h
pymoab/: CMakeLists.txt  Makefile.am  install.sh.cmake  requirements.txt  setup.py.cmake.in  setup.py.in
pymoab/pymoab/: __init__.py  core.pyx  moab.pxd  mpi-compat.h  parallelcomm.pxd  parallelcomm.pyx  scd.pyx  tag.pyx  tag_conventions.pxd  types.pyx
pymoab/tests/: driver.py  test_core.py  test_hom.py  test_parallelcomm.py  test_range.py  test_scd.py  test_skinner.py
src/: AEntityFactory.cpp  AEntityFactory.hpp  AdaptiveKDTree.cpp  AffineXform.cpp  AffineXform.hpp  AxisBox.cpp  AxisBox.hpp  BSPTree.cpp  BSPTreePoly.cpp  BVHTree.cpp  BitPage.cpp  BitPage.hpp  BitTag.cpp  BitTag.hpp  BoundBox.cpp  CMakeLists.txt  CN.cpp  CartVect.cpp  Core.cpp  DebugOutput.cpp  DebugOutput.hpp  DenseTag.cpp  DenseTag.hpp  DualTool.cpp  ElementSequence.hpp  EntitySequence.cpp  EntitySequence.hpp  ErrorHandler.cpp  ErrorOutput.cpp  ErrorOutput.hpp  FBEngine.cpp  Factory.cpp  FileOptions.cpp  GeomQueryTool.cpp  GeomTopoTool.cpp  GeomUtil.cpp  HalfFacetRep.cpp  HigherOrderFactory.cpp  HomXform.cpp  Internals.hpp  (+85 more)
src/parallel/: CMakeLists.txt  MBParallelConventions.h  ParCommGraph.cpp  ParallelComm.cpp  ParallelData.cpp  ParallelMergeMesh.cpp  ProcConfig.cpp  ReadParallel.cpp  ReadParallel.hpp  SharedSetData.cpp  SharedSetData.hpp  WriteHDF5Parallel.cpp  WriteHDF5Parallel.hpp  gs.cpp  moab_mpi.h
src/parallel/moab/: ParCommGraph.hpp  ParallelComm.hpp  ParallelData.hpp  ParallelMergeMesh.hpp  ProcConfig.hpp  gs.hpp
test/: CMakeLists.txt  GeomUtilTests.cpp  MBTest.cpp  Makefile.am  TagTest.cpp  TestRunner.hpp  TestTypeSequenceManager.cpp  TestUtil.hpp  Test_MBMeshSet.cpp  VarLenTagTest.cpp  adaptive_kd_tree_tests.cpp  adj_moab_test.cpp  affinexform_test.cpp  arc_intx_tests.cpp  bsp_tree_poly_test.cpp  bsp_tree_test.cpp  coords_connect_iterate.cpp  crop_vol_test.cpp  elem_eval_test.cpp  errorglobals.cpp  fileopts_test.cpp  geomObject.cpp  gnom_project_test.cpp  gqt_findvol_test.cpp  gqt_pointinvol_test.cpp  gqt_rayfire_test.cpp  gqt_simple_test.cpp  gttool_test.cpp  hireconst_test.cpp  homxform_test.cpp  imoab_remap.cpp  imoab_test.c  imoab_test.cpp  imoab_testF.F  imoab_testF.F90  internals_test.cpp  intx_in_plane_test.cpp  intx_on_sphere_test.cpp  intx_rll_cs_sphere_test.cpp  kd_tree_test.cpp  (+31 more)
tools/: .h5mtoscrip.cpp.swp  CMakeLists.txt  Makefile.am  SphereDecomp.cpp  SphereDecomp.hpp  convert.cpp  (+32 more)
(+1216 files in other folders)
